ng repeat corrected, scrollbar hidden

--- a/css/_countdown-card.scss
+++ b/css/_countdown-card.scss
@@ -98,6 +98,11 @@
     }
 
     .items{
+      &::-webkit-scrollbar {
+        width: 0px;  /* remove scrollbar space */
+        background: transparent;  /* optional: just make scrollbar invisible */
+      }
+
       position: relative;
       width: 100%;
       display: block;
